src/z80asm/z80asm2/t/40-syntax/expected/align_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/align_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/40-syntax/input/align_01.asm...
t/40-syntax/input/align_01.asm:1:6: error: Expression expected
    align
         ^
t/40-syntax/input/align_01.asm:2:1: error: Unterminated expression after "align"
    align ,
    ^
t/40-syntax/input/align_01.asm:4:13: error: Expected comma after alignment expression
    align 1+2*3 @
                ^
t/40-syntax/input/align_01.asm:5:12: error: Unterminated expression after ","
    align 1+2*3, 
               ^
t/40-syntax/input/align_01.asm:7:20: error: Unexpected token: "@"
    align 1+2*3, 2+3*4 @
                       ^
t/40-syntax/input/align_01.asm:8:19: error: Unexpected token: ","
    align 1+2*3, 2+3*4,
                      ^
Program: align_01
    Modules:
        Module: align_01 (current)
            Sections:
                Section:  (current)
    Statements:
        AlignStmt
            Location: t/40-syntax/input/align_01.asm:3:1
            Alignment:
                ExprBinary: +
                    Location: t/40-syntax/input/align_01.asm:3:9
                    Value type: Unknown
                    Tokens: 1+2*3
                    LHS:
                        ExprLiteralInt: 1
                            Location: t/40-syntax/input/align_01.asm:3:7
                            Value type: Unknown
                            Tokens: 
                    RHS:
                        ExprBinary: *
                            Location: t/40-syntax/input/align_01.asm:3:11
                            Value type: Unknown
                            Tokens: 
                            LHS:
                                ExprLiteralInt: 2
                                    Location: t/40-syntax/input/align_01.asm:3:9
                                    Value type: Unknown
                                    Tokens: 
                            RHS:
                                ExprLiteralInt: 3
                                    Location: t/40-syntax/input/align_01.asm:3:11
                                    Value type: Unknown
                                    Tokens: 
            Filler byte:
                ExprLiteralInt: 0
                    Location: t/40-syntax/input/align_01.asm:3:1
                    Value type: Unknown
                    Tokens: 
        AlignStmt
            Location: t/40-syntax/input/align_01.asm:6:1
            Alignment:
                ExprBinary: +
                    Location: t/40-syntax/input/align_01.asm:6:9
                    Value type: Unknown
                    Tokens: 1+2*3
                    LHS:
                        ExprLiteralInt: 1
                            Location: t/40-syntax/input/align_01.asm:6:7
                            Value type: Unknown
                            Tokens: 
                    RHS:
                        ExprBinary: *
                            Location: t/40-syntax/input/align_01.asm:6:11
                            Value type: Unknown
                            Tokens: 
                            LHS:
                                ExprLiteralInt: 2
                                    Location: t/40-syntax/input/align_01.asm:6:9
                                    Value type: Unknown
                                    Tokens: 
                            RHS:
                                ExprLiteralInt: 3
                                    Location: t/40-syntax/input/align_01.asm:6:11
                                    Value type: Unknown
                                    Tokens: 
            Filler byte:
                ExprBinary: +
                    Location: t/40-syntax/input/align_01.asm:6:16
                    Value type: Unknown
                    Tokens: 2+3*4
                    LHS:
                        ExprLiteralInt: 2
                            Location: t/40-syntax/input/align_01.asm:6:14
                            Value type: Unknown
                            Tokens: 
                    RHS:
                        ExprBinary: *
                            Location: t/40-syntax/input/align_01.asm:6:18
                            Value type: Unknown
                            Tokens: 
                            LHS:
                                ExprLiteralInt: 3
                                    Location: t/40-syntax/input/align_01.asm:6:16
                                    Value type: Unknown
                                    Tokens: 
                            RHS:
                                ExprLiteralInt: 4
                                    Location: t/40-syntax/input/align_01.asm:6:18
                                    Value type: Unknown
                                    Tokens: 
